--- a/db_config.ini
+++ b/db_config.ini
@@ -1,5 +1,5 @@
 [database]
 host = localhost
-user = root
-password = 19980528@Ss
-database = hehai
+user = your_username
+password = your_password
+database = your_database
